ingress-erpnext.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
  name: erpnext
  namespace: erpnext
spec:
  rules:
  - host: lhmerpnext.dev.symbolitech.com
    http:
      paths:
      - backend:
          service:
            name: erpnext
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - lhmerpnext.dev.symbolitech.com
    secretName: lhmerpnext.dev.symbolitech.com-tls
